kubernetes/registry/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: registry
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: registry
    spec:
      containers:
      - name: registry
        image: registry
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 5000
          name: registry
        volumeMounts:
        - name: data
          mountPath: /var/lib/registry
        - name: tls
          mountPath: /certs/
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: registry
      - name: tls
        secret:
          secretName: registry-tls
      restartPolicy: Always
