kubernetes/registry/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  selector:
    app: registry
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: registry
      protocol: TCP
      port: 5000
      targetPort: 5000
